    elided in more cases, eg: (let ((x 'foo)) (funcall foo)).
  * optimization: compiler is able to derive the return type of
    (AREF (THE STRING X) Y) as being CHARACTER.
  * optimization: CLRHASH on empty hash-tables no longer does pointless
    work. (thanks to Alec Berryman)
  * optimization: REPLACE deftransforms don't punt when :START1 or
    :START2 is given
  * bug fix: bogus odd-number-of-keywords STYLE-WARNINGs from calls to
    functions with an odd number of &OPTIONAL arguments, a &REST
    argument, and one or more &KEY arguments at the call site.
  * bug fix: STYLE-WARNINGs for functions with both &OPTIONAL and &KEY
    arguments appeared at call sites as well.
  * bug fix: fixed #425; CLOSE drops input buffers from streams, so
    READ-LINE &co can no longer read from them afterwards. (reported
    by Damien Cassou)
  * bug fix: fixed #427: unused local aliens no longer cause compiler
    breakage. (reported by Stelian Ionescu, Andy Hefner and Stanislaw
    Halik)
  * bug fix: non-local exit from a WITH-ALIEN form no longer causes
    alien-stack leakage. (reported by Andy Hefner)
  * bug fix: PROGV signals an error when an attempt to violate declared
    type of a variable or bind a constant is made.
  * bug fix: SET signals an error when an attempt to violate declared
    type of a variable is made.
  * bug fix: restart computation during the execution of a restart
    test function no longer causes infinite recursion. (reported by
    Michael Weber)
  * bug fix: calling SB-COVER:REPORT with a non-directory pathname now
    signals an error. (thanks to Pierre Mai)
  * bug fix: EXPORT left symbol unexported in conflict situations.
    (thanks to Michael Weber)
  * bug fix: correctly handle name conflicts involving CL:NIL.
    (thanks to Michael Weber)
  * bug fix: RESOLVE-CONFLICT restart for name conflicts handles
    conflicts arising from USEing package with conflicting symbols
    correctly. (thanks to Michael Weber)
